docs: add inline explanations with code samples after terse tables in docs 01-11